@@ -128,6 +128,8 @@ FILE *open_file(char *name, int decompress, int noise_mode)
   strncpy(current_filename, name, 1023);
   current_filename[1023]='\0';
 
+
+
   ctl->cmsg(CMSG_INFO, VERB_DEBUG, "Trying to open %s", current_filename);
   if ((fp=try_to_open(current_filename, decompress, noise_mode)))
     return fp;
@@ -152,6 +154,7 @@ FILE *open_file(char *name, int decompress, int noise_mode)
 	  }
 	strcat(current_filename, name);
 	ctl->cmsg(CMSG_INFO, VERB_DEBUG, "Trying to open %s", current_filename);
+
 	if ((fp=try_to_open(current_filename, decompress, noise_mode)))
 	  return fp;
 	if (noise_mode && (errno != ENOENT))
@@ -222,6 +225,7 @@ void *safe_malloc(size_t count)
 /* This adds a directory to the path list */
 void add_to_pathlist(char *s)
 {
+
   PathList *plp=safe_malloc(sizeof(PathList));
   strcpy((plp->path=safe_malloc(strlen(s)+1)),s);
   plp->next=pathlist;
