@@ -3,8 +3,8 @@
 <HEAD>
 <TITLE>The KMidi Handbook: Copyright</TITLE>
 <META HTTP-EQUIV="content-type" CONTENT="text/html; charset=iso-8859-1">
-<META NAME="keywords" CONTENT="kmidi midi">
-<META NAME="description" CONTENT="Documentation for kmidi">
+<META NAME="keywords" CONTENT="KMidi Midi Player Timidity Midi to Wav">
+<META NAME="description" CONTENT="KMidi Midi Player Timidity Midi To Wav">
 </HEAD>
 <BODY BGCOLOR="#ffffff" LINK="#aa0000" TEXT="#000000" > 
 <FONT FACE="Helvetica">
