@@ -1,2 +1,2 @@
-#define KMIDIVERSION "0.3.4"
+#define KMIDIVERSION "0.3.5"
 #define TIMID_VERSION "0.2i"
